--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ html {
 }
 
 .email__subject,
-.email__body {
+.email__content {
   background-color: #efefef;
   margin: 1rem;
   padding: 1rem 2rem;
